# maid

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
proto/: CMakeLists.txt  remote.proto
protos/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  remote.cpp
src/include/: remote.h
